2005-02-24 Mikhail Khodjaiants
	Applied patch from Tracy Miranda (bug 86540: NPE in CProjectSourceLocation).
	The check for the project and synchronization are added to "initializeFolders".
	* CProjectSourceLocation.java

2005-02-03 Mikhail Khodjaiants
	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
	ICWatchpoint should extend ILineBreakpoint to allow watchpoints to be shown in editors.
	* ICWatchpoint.java
	* CWatchpoint.java

2005-02-03 Mikhail Khodjaiants
	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
	* CDIDebugModel.java

2005-02-02 Mikhail Khodjaiants
	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
	Added new "createWatchpoint" method that accepts position information.
	* CDIDebugModel.java

2005-01-27 Mikhail Khodjaiants
	Fix for bug 82825: "Internal" error when trying to launch a debug session.
	* CDebugTarget.java
	* CExtendedMemoryBlockRetrieval.java: removed
	* CExtendedMemoryBlock.java: removed

2005-01-19 Mikhail Khodjaiants
	Fix for bug 83051: Add global variables deletes existing ones when new added.
	* ICGlobalVariableManager.java
	* CGlobalVariableManager.java
	* CVariableFactory.java

2005-01-18 Mikhail Khodjaiants
	Fix for bug 82858: NPE when adding global variable to variable view.
	* CDebugTarget.java
	* CVariableFactory.java

2005-01-04 Mikhail Khodjaiants
	Fix for bug 82184: arrayboundsexception on display of array variable.
	* CIndexedValue.java

2004-12-20 Mikhail Khodjaiants
	Fix for bug 81698: NumberFormatException in CValue.
	* CValue.java

2004-12-16 Mikhail Khodjaiants
	Fix for bug 81381: Deadlock when single stepping.
	* CThread.java

2004-12-08 Mikhail Khodjaiants
	Fix for bug 79678: NPE in Expression.
	* CExpression.java

2004-12-01 Mikhail Khodjaiants
	New fix for bug 80034: Expressions view does not display correct no. of elements in array.
	* CValueFactory.java
	* CExpression.java
